<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:weightSum="2">

    <LinearLayout
        android:id="@+id/calculator_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="CALCULADORA"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:orientation="horizontal"
            android:rowCount="5">

            <!-- Botón 1 -->
            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="@string/_1"
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Botón 2 -->
            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="@string/_2"
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Botón 3 -->
            <Button
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="3"
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Botón 4 -->
            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="4"
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Botón 5 -->
            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="5"
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Botón 6 -->
            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="6"
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Botón 7 -->
            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="7"
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Botón 8 -->
            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="8"
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Botón 9 -->
            <Button
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="9"
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Botón 0 -->
            <Button
                android:id="@+id/button0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="@string/button_0"
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Botón + -->
            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="+"
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Botón - -->
            <Button
                android:id="@+id/buttonSubtract"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="-"
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Botón * -->
            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="*"
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Botón / -->
            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="/"
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />


            <!-- Botón = -->
            <Button
                android:id="@+id/buttonEquals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_rowSpan="1"
                android:layout_columnWeight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@android:color/white"
                android:text="="
                android:textColor="@color/button_background_color"
                android:textSize="34sp"
                android:textStyle="bold" />

        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
